# press_it

./: README.md  multiformat_benchmark.py  press.py  pyproject.toml  ssimulacra2_benchmark.parquet
press_it/: __init__.py  benchmark_cli.py  cli.py  encoders.py  utils.py
press_it/benchmark/: __init__.py  analysis.py  core.py  engines.py  image.py  main.py  runner.py
press_it/benchmark/analysis/: __init__.py  consistency.py  core.py  efficiency.py  quality.py  reporting.py  summary.py  visualization.py
press_it/cli/: __init__.py  benchmark_cli.py  compression_cli.py  main.py  visualization_cli.py
press_it/core/: __init__.py  compression.py  encoders.py  quality.py
press_it/utils/: __init__.py  image.py  subprocess_utils.py  validation.py
scripts/: analyse_benchmark.py
